@@ -30,6 +30,7 @@ import org.apache.hadoop.conf.Configuration;
 import org.apache.hadoop.hbase.MultithreadedTestUtil.RepeatingTestThread;
 import org.apache.hadoop.hbase.MultithreadedTestUtil.TestContext;
 import org.apache.hadoop.hbase.client.Get;
+import org.apache.hadoop.hbase.client.HBaseAdmin;
 import org.apache.hadoop.hbase.client.HTable;
 import org.apache.hadoop.hbase.client.Put;
 import org.apache.hadoop.hbase.client.Result;
@@ -240,15 +241,6 @@ public class TestAcidGuarantees implements Tool {
       int numGetters,
       int numScanners,
       int numUniqueRows) throws Exception {
-      runTestAtomicity(millisToRun, numWriters, numGetters, numScanners,
-		       numUniqueRows, true);
-  }
-
-  public void runTestAtomicity(long millisToRun,
-      int numWriters,
-      int numGetters,
-      int numScanners,
-      int numUniqueRows, boolean useFlusher) throws Exception {
     createTableIfMissing();
     TestContext ctx = new TestContext(util.getConfiguration());
     
@@ -265,13 +257,12 @@ public class TestAcidGuarantees implements Tool {
       ctx.addThread(writer);
     }
     // Add a flusher
-    if (useFlusher) {
-      ctx.addThread(new RepeatingTestThread(ctx) {
-        public void doAnAction() throws Exception {
-          util.flush();
-        }
-      });
-    }
+    ctx.addThread(new RepeatingTestThread(ctx) {
+      HBaseAdmin admin = new HBaseAdmin(util.getConfiguration());
+      public void doAnAction() throws Exception {
+        admin.flush(TABLE_NAME);
+      }
+    });
 
     List<AtomicGetReader> getters = Lists.newArrayList();
     for (int i = 0; i < numGetters; i++) {
@@ -359,8 +350,7 @@ public class TestAcidGuarantees implements Tool {
     int numGetters = c.getInt("numGetters", 2);
     int numScanners = c.getInt("numScanners", 2);
     int numUniqueRows = c.getInt("numUniqueRows", 3);
-    // cannot run flusher in real cluster case.
-    runTestAtomicity(millis, numWriters, numGetters, numScanners, numUniqueRows, false);
+    runTestAtomicity(millis, numWriters, numGetters, numScanners, numUniqueRows);
     return 0;
   }
 
